@@ -30,4 +30,5 @@ void pkg_action_remove(const rc_config *,const pkg_action_args_t *);
 void pkg_action_search(const char *);
 void pkg_action_show(const char *);
 void pkg_action_upgrade_all(const rc_config *);
+int add_deps_to_trans(const rc_config *, transaction *, struct pkg_list *, struct pkg_list *, pkg_info_t *);
 
